--- a/fineroof/app/product-detail.html
+++ b/fineroof/app/product-detail.html
@@ -224,7 +224,78 @@
 				</div>
 			</div>
 		</div>
-
+		<div class="items-slider">
+			<div class="container container-inner">
+				<div class="items-slider__title">Пшеничный цвет</div>
+				<div class="items-slider__body">
+					<div class="slider-small-arrows">
+						<div class="slider-control slider-left slider-left_color">
+						</div>
+						<div class="slider-control slider-right slider-right_color">
+						</div>
+					</div>
+					<div class="items-slider__wrap swiper-container">
+						<div class="swiper-wrapper">
+							<div class="items-slider__item swiper-slide" style="fill: #f9db99;">
+								<svg>
+									<use xlink:href="/template/img/catalog-icons.svg#color-drop"></use>
+								</svg>
+							</div>
+							<div class="items-slider__item items-slider__item_white swiper-slide" style="fill: white;">
+								<svg>
+									<use xlink:href="/template/img/catalog-icons.svg#color-drop"></use>
+								</svg>
+							</div>
+							<div class="items-slider__item swiper-slide" style="fill: #704d45;">
+								<svg>
+									<use xlink:href="/template/img/catalog-icons.svg#color-drop"></use>
+								</svg>
+							</div>
+							<div class="items-slider__item swiper-slide"  style="fill: #b7804f;">
+								<svg>
+									<use xlink:href="/template/img/catalog-icons.svg#color-drop"></use>
+								</svg>
+							</div>
+							<div class="items-slider__item swiper-slide" style="fill: #ffddc7;">
+								<svg>
+									<use xlink:href="/template/img/catalog-icons.svg#color-drop"></use>
+								</svg>
+							</div>
+							<div class="items-slider__item swiper-slide" style="fill:#c1aa7e;">
+								<svg>
+									<use xlink:href="/template/img/catalog-icons.svg#color-drop"></use>
+								</svg>
+							</div>
+							<div class="items-slider__item swiper-slide" style="fill:#c99c84;">
+								<svg>
+									<use xlink:href="/template/img/catalog-icons.svg#color-drop"></use>
+								</svg>
+							</div>
+							<div class="items-slider__item swiper-slide"  style="fill:#523c3c;">
+								<svg>
+									<use xlink:href="/template/img/catalog-icons.svg#color-drop"></use>
+								</svg>
+							</div>
+							<div class="items-slider__item swiper-slide" style="fill:#d8d1cd;">
+								<svg>
+									<use xlink:href="/template/img/catalog-icons.svg#color-drop"></use>
+								</svg>
+							</div>
+							<div class="items-slider__item swiper-slide" style="fill:#ebebeb;">
+								<svg>
+									<use xlink:href="/template/img/catalog-icons.svg#color-drop"></use>
+								</svg>
+							</div>
+							<div class="items-slider__item swiper-slide" style="fill:#ebebeb;">
+								<svg>
+									<use xlink:href="/template/img/catalog-icons.svg#color-drop"></use>
+								</svg>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="props-table">
 			<div class="container container-inner container-inner">
 				<div class="props-table__wrap">
@@ -452,10 +523,10 @@
 				<div class="inner-subtitle inner-subtitle_margin-bottom">С этим товаром покупают</div>
 				<div class="items-block__wrap container-inner container-inner_min">
 					<div class="slider-small-arrows">
-							<div class="slider-control slider-left slider-left_similar">
-							</div>
-							<div class="slider-control slider-right slider-right_similar" >
-							</div>
+						<div class="slider-control slider-left slider-left_similar">
+						</div>
+						<div class="slider-control slider-right slider-right_similar" >
+						</div>
 					</div>
 					<div class="items-block__slider swiper-container">
 						<div class="items-block__wrapper swiper-wrapper">
