--- a/fineroof/app/product-detail.html
+++ b/fineroof/app/product-detail.html
@@ -165,6 +165,10 @@
 		<div class="inner-page">
 			<div class="container">
 				<div class="inner-page__wrap card-detail">
+					<a href="#" class="back-button">
+						<span class="back-button__arrow"></span>
+						<span>Обратно</span>
+					</a>
 					<div class="card-detail__top">
 						<div class="container-inner">
 							<div class="card-detail__title inner-subtitle inner-subtitle_with-margin">
@@ -228,7 +232,7 @@
 			<div class="container container-inner">
 				<div class="items-slider__title">Пшеничный цвет</div>
 				<div class="items-slider__body">
-					<div class="slider-small-arrows">
+					<div class="slider-small-arrows slider-small-arrows_min">
 						<div class="slider-control slider-left slider-left_color">
 						</div>
 						<div class="slider-control slider-right slider-right_color">
@@ -293,6 +297,13 @@
 							</div>
 						</div>
 					</div>
+				</div>
+			</div>
+		</div>
+		<div class="get-payment">
+			<div class="container">
+				<div class="get-payment__wrap">
+					<div class="get-payment__button big-button">Выполнить расчет</div>
 				</div>
 			</div>
 		</div>
