--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -435,10 +435,10 @@
 			</div>
 		</div>
 	</footer>
-	<div class="popup js-login">
+	<div class="popup jsCallbackForm">
 		<div class="popup__overlay">
 			<div class="popup__wrap">
-				<div class="popup__cross cross js-close">
+				<div class="popup__cross cross jsClosePopup">
 					<svg>
 						<use xlink:href="/template/img/icons.svg#cross"></use>
 					</svg>
@@ -490,6 +490,7 @@
 	<script src="/template/js/script.js"></script>
 	<script defer src='/template/js/svg-animate.js'></script>
 	<script defer src='/template/js/utils.js'></script>
+	<script defer src='/template/js/upload.js'></script>
 	<!-- <script src="/template/js/vivus.min.js"></script> -->
 </body>
 
