Настройка формы #3, выводит ошибки dnd файла

--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -492,6 +492,11 @@
 	<script defer src='/template/js/utils.js'></script>
 	<script defer src='/template/js/upload.js'></script>
 	<!-- <script src="/template/js/vivus.min.js"></script> -->
+	<template id="error">
+		<div class="error">
+			  <p class="error__message"></p>
+			  <button class="error__button classic-button" >Попробовать снова</button>
+		</div>
+	 </template>
 </body>
-
 </html>
