Правки по главной

--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -182,8 +182,8 @@
 		</div>
 		<div class="catalog-slider">
 			<div class="container_big container">
-				<div class="catalog-slider__svg">
-					<object id='mainPattern' class="animating jsAnimate" type="image/svg+xml" data="/template/img/icons.svg#pattern-play"></object>
+				<div class="catalog-slider__pattern">
+					<img src="/template/img/pattern.svg#pattern" alt="">
 				</div>
 				<div class="catalog-slider__wrap">
 					<div class="catalog-slider__title custom-title custom-title_no-border custom-title_with-lane custom-title_full-house">
@@ -421,13 +421,61 @@
 	</main>
 	<footer class="footer">
 		<div class="container">
+			<div class="footer__wrap footer__wrap_sb footer__wrap_margin">
+				<ul class="footer__list">
+					<li class="footer__item"><a href="#">Фасад    </a></li>
+					<li class="footer__item"><a href="#">Изоляция  </a></li>
+					<li class="footer__item"><a href="#">Мансардные окна  </a></li>
+					<li class="footer__item"><a href="#">Забор </a></li>
+					<li class="footer__item"><a href="#">Кровля    </a></li>
+					<li class="footer__item"><a href="#">Водосток   </a></li>
+					<li class="footer__item"><a href="#">Комплектующие    </a></li>
+					<li class="footer__item"><a href="#">Чердачные лестницы  </a></li>
+				</ul>
+				<div class="footer__right">
+					<div class="footer__address">
+						<div class="footer__icon">
+							<img src="/template/img/eliplse1.png" alt="">
+						</div>
+						<div class="footer__value">
+							<span class="green-text">г. Волжский, <br>Складской переулок, д. 2г</span>
+						</div>
+					</div>
+					<div class="footer__address">
+						<div class="footer__icon">
+							<img src="/template/img/eliplse1.png" alt="">
+						</div>
+						<div class="footer__value">
+							<span class="green-text">г. Волгоград, <br>ул. К. Либкнехта, д. 8</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container">
 			<div class="footer__wrap">
 				<span>2018 Fine Roof</span>
 				<a href="mailto:help@fineroof.ru" class="footer__link border-link">
 					help@fineroof.ru
 				</a>
-				<div class="footer__social">
-					<img src="/template/img/icons-social.png" alt="">
+				<div class="footer__social social">
+					<div class="social__wrap">
+						<a href="#" class="social__item">
+							<svg>
+								<use xlink:href="/template/img/icons.svg#vk"></use>
+							</svg>
+						</a>
+						<a href="#" class="social__item">
+							<svg>
+								<use xlink:href="/template/img/icons.svg#fb"></use>
+							</svg>
+						</a>
+						<a href="#" class="social__item">
+							<svg>
+								<use xlink:href="/template/img/icons.svg#inst"></use>
+							</svg>
+						</a>
+					</div>
 				</div>
 				<a href="#" class="footer__link border-link">
 					Designed by Creative Brands
