--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -413,7 +413,11 @@
 						<a href="#" class="gallery__link classic-button classic-button_white">Смотреть</a>
 					</div>
 					<div class="gallery__right">
-						<img src="/template/img/gallery.png" alt="">
+						<object class='galery-house' type="image/svg+xml" data="/template/img/icons.svg#gallery-house">
+						</object>	
+						<!-- <svg xmlns="http://www.w3.org/2000/svg" class="galery-house">
+							<use xlink:href="/template/img/icons.svg#gallery-house" />
+						</svg> -->
 					</div>
 				</div>
 			</div>
