Правки проекта, полная регруппировка SVG

--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -334,8 +334,16 @@
 		<div class="content-block">
 			<div class="container">
 				<div class="content-block__wrap">
-					<div class="content-block__images image-block">
-						<img id="mainFormObject" src="/template/img/background5.png" alt="">
+					<div class="content-block__svg image-block">
+						<svg class="content-block__left">
+							<use xlink:href="/template/img/common-svg.svg#running-house"></use>
+						</svg>
+						<svg  class="content-block__center">
+							<use xlink:href="/template/img/common-svg.svg#person"></use>
+						</svg>
+						<svg  class="content-block__right">
+							<use xlink:href="/template/img/common-svg.svg#block"></use>
+						</svg>
 					</div>
 					<div class="content-block__body">
 						<div class="content-block__column">
@@ -414,7 +422,7 @@
 					</div>
 					<div class="gallery__right">
 						<object class='galery-house' type="image/svg+xml" data="/template/img/icons.svg#gallery-house">
-						</object>	
+						</object>
 						<!-- <svg xmlns="http://www.w3.org/2000/svg" class="galery-house">
 							<use xlink:href="/template/img/icons.svg#gallery-house" />
 						</svg> -->
