Правки шапки, правки изображений, PP

--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -39,7 +39,7 @@
 								<img src="/template/img/eliplse1.png" alt="">
 							</div>
 							<div class="header__right">
-								<span class="green-text">г. Волжский, <br>Складской переулок, д. 2г</span>
+								<span class="green-text">г. Волжский, <br>ул. Горького, д. 41р</span>
 							</div>
 						</div>
 						<div class="header__contacts">
@@ -47,7 +47,7 @@
 								<img src="/template/img/eliplse1.png" alt="">
 							</div>
 							<div class="header__right">
-								<span class="green-text">Рабочий посёлок Средняя Ахтуба, <br> ул. Профсоюзная, д. 35</span>
+								<span class="green-text">г. Волгоград, <br> ул. К. Либкнехта, д. 8</span>
 							</div>
 						</div>
 					</div>
@@ -86,7 +86,7 @@
 							<li class="navigation__item">
 								<a href="#" class="navigation__link">Фотогалерея</a>
 								<span class="navigation__additional">
-									Реальные строительные объекты
+									Реальные <br> строительные <br> объекты
 								</span>
 							</li>
 							<li class="navigation__item">
@@ -96,7 +96,7 @@
 							<li class="navigation__item">
 								<a href="#" class="navigation__link">Youtube-канал</a>
 								<span class="navigation__additional">
-									Делимся опытом по выбору материалов
+									Делимся <br> опытом по выбору <br> материалов
 								</span>
 							</li>
 						</ul>
@@ -125,7 +125,7 @@
 									<img src="/template/img/eliplse1.png" alt="">
 								</div>
 								<div class="header__right">
-									<span class="green-text">г. Волжский, <br>Складской переулок, д. 2г</span>
+									<span class="green-text">г. Волжский, <br>ул. Горького, д. 41р</span>
 								</div>
 							</div>
 							<div class="header__contacts">
@@ -133,7 +133,7 @@
 									<img src="/template/img/eliplse1.png" alt="">
 								</div>
 								<div class="header__right">
-									<span class="green-text">Рабочий посёлок Средняя Ахтуба, <br> ул. Профсоюзная, д. 35</span>
+									<span class="green-text">г. Волгоград, <br> ул. К. Либкхнехта, д. 8</span>
 								</div>
 							</div>
 						</div>
@@ -256,7 +256,7 @@
 										 <use xlink:href="/template/img/catalog-icons.svg#catalog7"></use>
 									 </svg>
     							 </span>
-    							 <span class="catalog__name">Фасадные материалы</span>
+    							 <span class="catalog__name">Фасад</span>
   							 </span>
   						 </a>
   						 <a href="#" class="catalog__item">
@@ -266,7 +266,7 @@
 											<use xlink:href="/template/img/catalog-icons.svg#catalog6"></use>
 										</svg>
     								 </span>
-    							 <span class="catalog__name">Скатные кровли</span>
+    							 <span class="catalog__name">Кровля</span>
   							 </span>
   						 </a>
   						 <a href="#" class="catalog__item">
@@ -276,7 +276,7 @@
 											<use xlink:href="/template/img/catalog-icons.svg#catalog2"></use>
 										</svg>
     							 	</span>
-    							 <span class="catalog__name">Изоляционные материалы</span>
+    							 <span class="catalog__name">Изоляция</span>
   							 </span>
   						 </a>
 						 </div>
@@ -308,7 +308,7 @@
 											<use xlink:href="/template/img/catalog-icons.svg#catalog5"></use>
 										</svg>
   									 </span>
-  								 <span class="catalog__name">Ограждения</span>
+  								 <span class="catalog__name">Забор</span>
 								 </span>
 							 </a>
 						 </div>
@@ -320,7 +320,17 @@
 											<use xlink:href="/template/img/catalog-icons.svg#catalog3"></use>
 										</svg>
   									 </span>
-  								 <span class="catalog__name">Кровельные аксессуары</span>
+  								 <span class="catalog__name">Комплектующие</span>
+								 </span>
+							 </a>
+							 <a href="#" class="catalog__item">
+								 <span class="catalog__subwrap">
+									 <span class="catalog__picture">
+										<svg>
+											<use xlink:href="/template/img/catalog-icons.svg#catalog8"></use>
+										</svg>
+									 </span>
+								 <span class="catalog__name">Чердачные лестницы </span>
 								 </span>
 							 </a>
 						 </div>
