Полностью исправленная главная страница, правки адаптива

--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -112,32 +112,6 @@
 							Сервис, доставка, монтаж, качественная консультация.
 						</div>
 					</div>
-					<div class="header__hidden">
-						<div class="header__contacts">
-							<div class="header__right">
-								<a href="tel:78005500053" class="header__item green-text">+7 800 550 00 53</a>
-								<span>Бесплатный звонок</span>
-							</div>
-						</div>
-						<div class="header__center">
-							<div class="header__contacts">
-								<div class="header__left">
-									<img src="/template/img/eliplse1.png" alt="">
-								</div>
-								<div class="header__right">
-									<span class="green-text">г. Волжский, <br>ул. Горького, д. 41р</span>
-								</div>
-							</div>
-							<div class="header__contacts">
-								<div class="header__left">
-									<img src="/template/img/eliplse1.png" alt="">
-								</div>
-								<div class="header__right">
-									<span class="green-text">г. Волгоград, <br> ул. К. Либкхнехта, д. 8</span>
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -168,13 +142,22 @@
 				<div class="index-slider__container swiper-container">
 					<div class="index-slider__wrapper swiper-wrapper">
 						<div class="index-slider__item swiper-slide">
-							<img src="/template/img/banner1.jpg" alt="">
+							<picture>
+							  <source srcset="/template/img/banner-mobile.jpg" media="(max-width: 479px)">
+							  <img src="/template/img/banner1.jpg" alt="">
+							</picture>
 						</div>
 						<div class="index-slider__item swiper-slide">
-							<img src="/template/img/banner1.jpg" alt="">
+							<picture>
+							  <source srcset="/template/img/banner-mobile.jpg" media="(max-width: 479px)">
+							  <img src="/template/img/banner1.jpg" alt="">
+							</picture>
 						</div>
 						<div class="index-slider__item swiper-slide">
-							<img src="/template/img/banner1.jpg" alt="">
+							<picture>
+							  <source srcset="/template/img/banner-mobile.jpg" media="(max-width: 479px)">
+							  <img src="/template/img/banner1.jpg" alt="">
+							</picture>
 						</div>
 					</div>
 				</div>
