Правки по слайдерам

--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -126,7 +126,7 @@
 	</script>
 	<main class="main">
 		<div class="index-slider">
-			<div class="container container_big">
+			<div class="container container_full container_no-padding">
 				<div class="swiper-pagination"></div>
 				<div class="slider-controls">
 					<div class="slider-control slider-left slider-left_index">
