--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -419,7 +419,7 @@
 							Напишите <br> нам, мы поможем <br> с выбором
 						</div>
 					</div>
-					<div class="actions__item">
+					<div class="actions__item jsChannel">
 						<div class="actions__icon">
 							<object type="image/svg+xml" data="/template/img/icons.svg#video-play"></object>
 						</div>
@@ -541,15 +541,18 @@
 						</div>
 						<div class="popup__row">
 							<label for="" class="popup__item text-label">
-								<input class="text-input" type="text" name="" value="" placeholder="Имя">
+								<input class="text-input" type="text" name="" value="" >
+								<span>Имя</span>
 							</label>
 							<label for="" class="popup__item text-label">
-								<input class="text-input" type="text" name="" value="" placeholder="Телефон">
+								<input class="text-input" type="text" name="" value="" >
+								<span>Телефон</span>
 							</label>
 						</div>
 						<div class="popup__row">
 							<label for="" class="popup__item text-label">
-								<input class="text-input" type="text" name="" value="" placeholder="Город">
+								<input class="text-input" type="text" name="" value="">
+								<span>Город</span>
 							</label>
 							<label class="popup__item text-file">
 								<input type="file" id="file" name="files" class="text-file-input visually-hidden" value="">
