--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -411,25 +411,27 @@
 							<object class="hoverDraw" type="image/svg+xml" data="/template/img/icons.svg#house-hover"></object>
 							<!-- <img src="/template/img/action1.png" alt=""> -->
 						</div>
-						<a href="#" class="actions__title custom-title custom-title_with-border custom-title_not-full-house custom-title_center">
+						<div class="actions__title custom-title custom-title_with-border custom-title_not-full-house custom-title_center">
 							<span>Форма</span>
 							<span>связи</span>
-						</a>
+						</div>
 						<div class="actions__text">
 							Напишите <br> нам, мы поможем <br> с выбором
 						</div>
+
 					</div>
 					<div class="actions__item jsChannel">
 						<div class="actions__icon">
 							<object type="image/svg+xml" data="/template/img/icons.svg#video-play"></object>
 						</div>
-						<a href="#" class="actions__title custom-title custom-title_with-border custom-title_not-full-house custom-title_center">
+						<div class="actions__title custom-title custom-title_with-border custom-title_not-full-house custom-title_center">
 							<span>Youtube</span>
 							<span>канал</span>
-						</a>
+						</div>
 						<div class="actions__text">
 							Делимся <br> опытом
 						</div>
+						<a href="#"></a>
 					</div>
 				</div>
 			</div>
