--- a/fineroof/app/products.html
+++ b/fineroof/app/products.html
@@ -144,7 +144,7 @@
 	</header>
 	<script type="application/ld+json">
 		{
-			"@conte xt": "http://schema.org",
+			"@context": "http://schema.org",
 			"@type": "Organization",
 			"url": "",
 			"logo": ""
@@ -514,6 +514,39 @@
 					</div>
 					<div class="catalog-list__detail catalog-section">
 
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="content-block">
+			<div class="container">
+				<div class="content-block__wrap">
+					<div class="content-block__body">
+						<div class="content-block__column">
+							<div class="content-block__subtitle custom-subtitle">
+								Дом, милый дом!
+							</div>
+							<p>Вы так долго над ним трудились: закладывали фундамент, возводили несущие стены, монтировали окна и даже впустили кошку первой! </p>
+							<p>Вы всё сделали по правилам — и, наконец, настал тот день, когда Ваш дом готов. </p>
+							<p>Почти. </p>
+							<p>Остаётся последний штрих — красивая  и надёжная крыша над головой.  И её тоже нужно сделать правильно.</p>
+						</div>
+						<div class="content-block__column">
+							<div class="content-block__subtitle custom-subtitle">
+								Именно в этом <br> Вам поможем мы — Fine Roof!
+							</div>
+							<p>У нас Вы найдете широкий выбор видов кровли и комплектующих: черепица битумная и металлическая, профнастил, сайдинг и фасадные панели, водосточные системы и мансардные окна, утеплитель и гидроизоляция – всё, что нужно Вашей крыше и больше! </p>
+							<p>Арифметика Fine Roof очень простая, Вам понравится: </p>
+							<p>1 минута, чтобы обговорить с нами детали по телефону; </p>
+							<p>1 час, чтобы выбрать варианты кровли и составить смету под Ваш бюджет; </p>
+							<p>1 день, в течение которого к Вам приедет мастер и определит точные размеры... </p>
+							<p>...и мы уже говорили, что это всё бесплатно? Так вот, это всё бесплатно! </p>
+							<p>Мы осуществляем доставку материалов, и это — Вы угадали! — тоже бесплатно. Сотрудничая с нами, Вам даже не придется искать рабочих: мы можем порекомендовать проверенные бригады мастеров, которые сделают крышу под ключ… </p>
+							<p>…чтобы Вы уже собственным ключом открыли двери теперь уже по-настоящему Вашего, завершенного дома!</p>
+						</div>
+					</div>
+					<div class="content-block__images content-block__images_left content-block__images_bottom content-block__images_hammer image-block ">
+						<object id="mainHammer" class="animating jsAnimate" type="image/svg+xml" data="/template/img/icons.svg#hammer-play"></object>
 					</div>
 				</div>
 			</div>
