--- a/fineroof/app/products3.html
+++ b/fineroof/app/products3.html
@@ -157,6 +157,9 @@
 			<div class="container">
 				<div class="breadcrumbs__wrap" itemscope="" itemtype="http://schema.org/BreadcrumbList">
 					<ul class="breadcrumbs__list">
+						<li>
+							<img src="/template/img/breadcrumb.png" alt="" class="breadcrumbs__img">
+						</li>
 						<li class="breadcrumbs__item" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem">
 							<meta itemprop="position" content="1">
 							<a class="breadcrumbs__link" href="" title="Главная" itemprop="item">Продукция</a>
