--- a/fineroof/app/services.html
+++ b/fineroof/app/services.html
@@ -177,6 +177,16 @@
 							<div class="content-block__image content-block__image_services">
 								<img src="/template/img/inner-services-image.png" alt="">
 							</div>
+							<div class="content-block__image content-block__image_worker">
+								<svg>
+									<use xlink:href="/template/img/common-svg.svg#worker-with-dog"></use>
+								</svg>
+							</div>
+							<div class="content-block__image content-block__image_spiral">
+								<svg>
+									<use xlink:href="/template/img/common-svg.svg#vertical-spiral"></use>
+								</svg>
+							</div>
 						</div>
 						<div class="content-block__column">
 							<div class="content-block__subtitle custom-subtitle">
