--- a/fineroof/app/services.html
+++ b/fineroof/app/services.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-	<header class="header">
+	<header class="header header_inner">
 		<div class="header__top">
 			<div class="container">
 				<div class="header__wrap">
@@ -110,32 +110,6 @@
 						</div>
 						<div class="header__feature">
 							Сервис, доставка, монтаж, качественная консультация.
-						</div>
-					</div>
-					<div class="header__hidden">
-						<div class="header__contacts">
-							<div class="header__right">
-								<a href="tel:78005500053" class="header__item green-text">+7 800 550 00 53</a>
-								<span>Бесплатный звонок</span>
-							</div>
-						</div>
-						<div class="header__center">
-							<div class="header__contacts">
-								<div class="header__left">
-									<img src="/template/img/eliplse1.png" alt="">
-								</div>
-								<div class="header__right">
-									<span class="green-text">г. Волжский, <br>Складской переулок, д. 2г</span>
-								</div>
-							</div>
-							<div class="header__contacts">
-								<div class="header__left">
-									<img src="/template/img/eliplse1.png" alt="">
-								</div>
-								<div class="header__right">
-									<span class="green-text">Рабочий посёлок Средняя Ахтуба, <br> ул. Профсоюзная, д. 35</span>
-								</div>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -313,6 +287,11 @@
 										<a href="tel:+78005500053">+7 800 550 00 53</a>
 									</li>
 								</ul>
+							</div>
+							<div class="content-block__image content-block__image_mobile">
+								<svg>
+									<use xlink:href="/template/img/common-svg.svg#worker-with-dog"></use>
+								</svg>
 							</div>
 						</div>
 					</div>
